Finish sections feature implementation
